# py-nab

./: .gitignore  README.md  release.sh
almatest/: README.md  pyproject.toml
almatest/almatest/: __init__.py  check_ruff.py  containers.py
almatest/tests/: test_codestyle.py  test_containers.py
ararat/: README.md  pyproject.toml
ararat/ararat/common/: dt.py  error.py
ararat/ararat/db/: connection.py  dao.py  session.py
ararat/ararat/serialize/: common.py  kafka.py  pydantic.py
ararat/tests/: conftest.py  test_codestyle.py  test_db_utils.py  test_exception_model.py  test_parse_db_url.py
frontik-fastapi/: README.md  pyproject.toml
frontik-fastapi/example_app/: main.py
frontik-fastapi/example_app/pages/: classic_handler.py
frontik-fastapi/example_app/routes/: __init__.py  other_app.py
frontik-fastapi/ffapi/: dep.py  deptest.py  handler.py  router.py
