[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "almatest"
version = "1.4.0"
description = ""
authors = ["boksh <e.bokshitskiy@hh.ru>"]
readme = "README.md"
packages = [
    { include = "almatest" },
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
pytest = ">= 7.2.0"
pytest-asyncio = ">= 0.20.1,< 0.23"
testcontainers = { version = ">= 4.4.0", python = ">=3.9,<=3.12" }
psycopg2-binary = ">= 2.9.5"
redis = "*"
SQLAlchemy = {extras = ["asyncio"], version = "*"}

[tool.poetry.group.test.dependencies]
ruff = '0.1.8'

[tool.poetry.plugins."pytest11"]
almatest = "almatest"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --asyncio-mode=auto
  -p no:warnings
'''

[tool.ruff]
line-length = 120
target-version = 'py38'
select = [
    'FA',
]
preview = true
