[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ararat"
version = "1.3.0"
description = "tools for python backend application"
authors = ["boksh <e.bokshitskiy@hh.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
pytz = ">=2022.6"
sqlalchemy = { version = "^1.4.44", optional = true, extras = ["asyncio"] }
sqlalchemy-stubs = { version = "^0.4", optional = true }
asyncpg = { version = "^0.29.0", optional = true }
pydantic = { version = "*", optional = true }

[tool.poetry.extras]
db = ["sqlalchemy", "sqlalchemy-stubs", "asyncpg"]
serde = ["pydantic"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
almatest = { path = "../almatest", develop = true }
ruff = '0.1.8'

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --asyncio-mode=auto
  -p no:warnings
'''

[tool.ruff]
line-length = 120
target-version = 'py38'
select = [
    'FA',
]
preview = true
